@@ -1,4 +1,5 @@
-.build
-Benchmark-CSV-*
-examples/*/*.csv
-examples/*/*.png
+/.build
+/Benchmark-CSV-*
+/examples/*/*.csv
+/examples/*/*.png
+/tmp/
