@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.020001 at Tue Sep 16 03:45:42 2014
+; vim: syntax=dosini
 name             = Benchmark-CSV
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
@@ -16,7 +17,7 @@ toolkit_hardness  = soft
 bumpversions      = 1
 copyfiles         = LICENSE
 srcreadme         = mkdn
-twitter_hash_tags = #perl #cpan
+; twitter_extra_hash_tags =
 ; auto_prereqs_skip = File::Find
 
 [Prereqs]
