@@ -1,6 +1,14 @@
 Release history for Benchmark-CSV
 
 {{$NEXT}}
+ - BugFix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001001, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +13 ↑4 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 ↓1 (recommends: ↑1 ↓1)
 
 0.001001 2014-09-18T10:21:56Z
  [Bugfix]
@@ -8,4 +16,3 @@ Release history for Benchmark-CSV
 
 0.001000 2014-09-17T12:16:30Z
  - First version.
-
